--- a/Kimberly/index.html
+++ b/Kimberly/index.html
@@ -13,8 +13,8 @@
     </head>
     <body>
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Coronavirus</a>
+      <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Covid-19</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,7 +24,10 @@
               <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.cdc.gov/coronavirus/2019-ncov/index.html">For More Information</a>
+              <a class="nav-link" href="covid2.html">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.cdc.gov/coronavirus/2019-ncov/index.html%22%3EFor More Information</a>
             </li>
           </ul>
         </div>
@@ -35,7 +38,7 @@
     </div>
 
     <!--Carousel starts here-->
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -73,6 +76,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+
       <!--Carousel ends here-->
 
 
