--- a/Harshni/aboutus.html
+++ b/Harshni/aboutus.html
@@ -10,14 +10,15 @@
 </head>
 
  <body>
-      <strong><h2></h2></strong>
-        <div class="aboutUs">
-            <img src="Images/1.png"/>
-           <b>ABOUT US</b>
-           <p>
-               Whether you are showcasing your Portfolio or a Resume, our professional tips and strategies have proven to be the most finest way to present capabilities in front of all and eliminate possible competition. 
-          </p>
-      </div>
+    <div class="aboutUs">
+        <img src="Images/1.png" alt="img" style="width:100%;">
+        <div class="text">
+            <b>ABOUT US</b>
+            <p>
+                Whether you are showcasing your Portfolio or a Resume, our professional tips and strategies have proven to be the most finest way to present capabilities in front of all and eliminate possible competition.
+           </p>
+        </div>
+    </div>
       <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
