--- a/Harshni/index.html
+++ b/Harshni/index.html
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://www.dealsanimg.com/d/l400/pict/143298520319_/umitive-zip-conference-folder-a4-ring.jpg" class="d-block w-100" alt="Example">
+           <img src="pictures/images.jpg" class="d-block w-100" alt="Example">
             <div class="carousel-caption d-none d-md-block">
               <h5><strong>3</strong></h5>
             </div>
