--- a/Harshni/main.html
+++ b/Harshni/main.html
@@ -27,14 +27,14 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="resume.html"><strong>PORTFOLIOS </strong><span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="portfolio.html"><strong>PORTFOLIOS </strong><span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><strong>RESUMES </strong><span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="resume.html"><strong>RESUMES </strong><span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
-    <div id="google_translate_element" class="float-right"></div> 
+    <div id="google_translate_element" class="float-right"></div>
 
             <!--LOG IN-->
             <ul class="nav navbar-nav navbar-right">
@@ -52,7 +52,7 @@
                                     <input type="text" class="form-control" placeholder="Password" required>
                                 </div>
                                 <button type="submit" class="btn btn-primary">Login</button>
-                            </form>                        
+                            </form>
                         </li>
                     </ul>
                 </li>
@@ -104,15 +104,15 @@
       <footer id="footer">
           <p><strong>All Rights Reserved, 2020</strong></p>
       </footer>
-      <script type="text/javascript"> 
-        function googleTranslateElementInit() { 
-            new google.translate.TranslateElement( 
-                {pageLanguage: 'en'}, 
-                'google_translate_element' 
-            ); 
-        } 
-    </script> 
-    
+      <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement(
+                {pageLanguage: 'en'},
+                'google_translate_element'
+            );
+        }
+    </script>
+
     <script type="text/javascript" src= "https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
       <!--Footer ends here-->
      <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
