--- a/Sneha/index.html
+++ b/Sneha/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -11,10 +11,12 @@
     <title>Climate Change</title>
   </head>
   <body>
-     <!--NavBar starts here-->
-     <nav class= "navbar navbar-expand-lg">
-      <div class= "differentColor">
 
+    <div class="se-pre-con"></div>
+
+     <!--NavBar starts here-->
+     <nav class= "navbar sticky-top navbar-expand-lg">
+      <div class= "differentColor">
 
 
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -29,9 +31,19 @@
               <a class="nav-link" href="page3.html">Effects</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="page5.html">Solutions</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="page4.html">How Can You Help</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactus.html">Contact Us</a>
+            </li>
           </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
         </div>
       </div>
       </nav>
