--- a/Sneha/contactus.html
+++ b/Sneha/contactus.html
@@ -21,16 +21,16 @@
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="page2.html">Causes</a>
+                <a class="nav-link" href="causes.html">Causes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="page3.html">Effects</a>
+                <a class="nav-link" href="effects.html">Effects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="page5.html">Solutions</a>
+                <a class="nav-link" href="solutions.html">Solutions</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="page4.html">How Can You Help</a>
+                <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contactus.html">Contact Us</a>
